Fix: Cards aligned to top, not center

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,7 @@
   padding: 20px;
   display: block;
   box-shadow: 2.5px 2.5px 10px lightgrey;
-  border-radius: 10px;
+  border-radius: 10px;;
 }
 
 .card-experience img {
@@ -45,7 +45,7 @@
   width: 45%;
   display: inline-flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 35px;
